Ignored return value inspection Improved filtering for Equation statement Added simple resolving for OMTActivityMetaType